# drt-subscription-fee-sc

./: Cargo.toml  README.md
.github/workflows/: actions.yml  release.yml
common/common_structs/: Cargo.toml
common/common_structs/src/: lib.rs  unique_payments.rs
common/common_subscriber/: Cargo.toml
common/common_subscriber/src/: common_subscriber.rs
farm-boosted-rewards-subscriber/: .gitignore  Cargo.toml  README.md
farm-boosted-rewards-subscriber/meta/: Cargo.toml
farm-boosted-rewards-subscriber/meta/src/: main.rs
farm-boosted-rewards-subscriber/src/: claim_farm_boosted.rs  events.rs  lib.rs  service.rs  subscriber_config.rs
farm-boosted-rewards-subscriber/tests/: subscriber_test.rs
farm-boosted-rewards-subscriber/tests/farm_setup/: mod.rs
farm-boosted-rewards-subscriber/tests/subscriber_setup/: mod.rs
farm-boosted-rewards-subscriber/tests/subscription_setup/: mod.rs
farm-boosted-rewards-subscriber/wasm/: Cargo.toml
farm-boosted-rewards-subscriber/wasm/src/: lib.rs
subscription-fee/: .gitignore  Cargo.toml  README.md
subscription-fee/meta/: Cargo.toml
subscription-fee/meta/src/: main.rs
subscription-fee/src/: common_storage.rs  fees.rs  lib.rs  pair_actions.rs  service.rs  subtract_payments.rs
subscription-fee/tests/: subscription_test.rs
subscription-fee/tests/pair_setup/: mod.rs
subscription-fee/tests/subscription_setup/: mod.rs
subscription-fee/wasm/: Cargo.toml
subscription-fee/wasm/src/: lib.rs
